src/test/deca/syntax/invalid/class_incorrecte.deca
// Description:
//    class incorrecte
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023
class Pangolin {

